--- a/samples/assistant/config.env
+++ b/samples/assistant/config.env
@@ -73,7 +73,7 @@ BHDTV_ANNOUNCE_URL=http://tracker.bit-hdtv.com:2710/<TRACKER_PASS_KEY>/announce
 
 # Nebulance
 NBL_API_KEY=# API_KEY - Torrent List and Upload permissions required
-NBL_ANNOUNCE_URL=http://nebulance.io:4400/<TRACKER_PASS_KEY>/announce
+NBL_ANNOUNCE_URL=https://nebulance.io:2001/<TRACKER_PASS_KEY>/announce
 
 # Anthelion
 ANT_API_KEY=# API_KEY - Torrent List and Upload permissions required
