--- a/samples/reuploader/reupload.config.env
+++ b/samples/reuploader/reupload.config.env
@@ -157,7 +157,7 @@ num_of_screenshots=10
 thumb_size=350
 # when no_spoilers is enabled, screenshots will be taken from the first half of the file
 # when no_spoilers is disabled, screenshots will be taken from the whole file after equal intervals
-no_spoilers=true
+no_spoilers=True
 
 
 ################################################################
@@ -165,7 +165,7 @@ no_spoilers=true
 #                Check for dupes (true | false)                #
 #                                                              #
 ################################################################
-check_dupes=true
+check_dupes=True
 # 100% matches will always be rejected so you'll need to set 'check_dupes' to 'false' if you insist on uploading a dupe (??)
 # ------------------------------------------------------------ #
 # ! Lower == Better ! (this is a percentage of similarity between your file and what's already on the tracker)
