--- a/samples/assistant/config.env
+++ b/samples/assistant/config.env
@@ -138,7 +138,7 @@ num_of_screenshots=10
 thumb_size=350
 # when no_spoilers is enabled, screenshots will be taken from the first half of the file
 # when no_spoilers is disabled, screenshots will be taken from the whole file after equal intervals
-no_spoilers=true
+no_spoilers=True
 
 
 
@@ -149,7 +149,7 @@ no_spoilers=true
 #                Check for dupes (true | false)                #
 #                                                              #
 ################################################################
-check_dupes=true
+check_dupes=True
 # 100% matches will always be rejected so you'll need to set 'check_dupes' to 'false' if you insist on uploading a dupe (??)
 # ------------------------------------------------------------ #
 # ! Lower == Better ! (this is a percentage of similarity between your file and what's already on the tracker)
@@ -183,7 +183,7 @@ acceptable_similarity_percentage=75
 # Set this to 'False' if you want an interactive & hands on experience
 # You'll be prompted to select the correct TMDB ID, Prompted to fix any small issues/discrepancies found during the upload process
 # !! It's recommended to keep this set to 'False' !!
-auto_mode=false
+auto_mode=False
 #
 #
 # !! THIS ONLY APPLIES IF ^^ "auto_mode=true" ^^  !!
@@ -191,7 +191,7 @@ auto_mode=false
 # e.g. If we can't auto detect 'audio_channels', we can still upload but we'll just omit that part from the torrent title
 # But if something like 'resolution' can't be detected then the upload will be cancelled since 'resolution' is a required API/Upload Key
 # !! It's recommended to keep this set to 'False' !! (Remember, you are responsible for following all tracker rules!)
-force_auto_upload=false
+force_auto_upload=False
 
 
 
@@ -253,7 +253,7 @@ media_move_location=
 #
 #     movies file will be moved to {media_move_location}/movie/...file
 #     epsiodes file will be moved to {media_move_location}/epsiode/...file
-enable_type_base_move=false
+enable_type_base_move=False
 
 
 
