--- a/samples/assistant/config.env
+++ b/samples/assistant/config.env
@@ -87,7 +87,9 @@ RF_ANNOUNCE_URL=https://reelflix.xyz/announce/<TRACKER_PASS_KEY>
 SZN_API_KEY=# API_KEY
 SZN_ANNOUNCE_URL=https://tracker.swarmazon.club:8443/<TRACKER_PASS_KEY>/announce
 
-
+# 3Evils
+3EVILS_API_KEY=# API_KEY
+3EVILS_ANNOUNCE_URL=https://3evils.net/announce/<TRACKER_PASS_KEY>
 
 
 
