--- a/.gitlab/ci/uploaders.gitlab-ci.yml
+++ b/.gitlab/ci/uploaders.gitlab-ci.yml
@@ -41,7 +41,7 @@ dockerhub-gg-bot-upload-assistant:
       echo "Publishing Image to Docker Hub Container Registry: '$DOCKER_CI_REGISTRY_IMAGE${tag}"
     - docker push "$DOCKER_CI_REGISTRY_IMAGE${tag}"
   rules:
-    - if: '$CI_COMMIT_TAG || $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH || $CI_COMMIT_BRANCH == "dev"' # runs for every tags and master branch and dev branch
+    - if: '$CI_COMMIT_TAG || $CI_COMMIT_BRANCH' # runs for every tags and master branch and dev branch
       exists:
         - Dockerfiles/Dockerfile
 
