metadata rewrite with more changes pending

--- a/samples/assistant/config.env
+++ b/samples/assistant/config.env
@@ -104,6 +104,8 @@ LST_ANNOUNCE_URL=https://lst.gg/announce/<TRACKER_PASS_KEY>
 ################################################################
 # TMDB API key (Required)
 TMDB_API_KEY=
+# IMDB API key (Optional)
+IMDB_API_KEY=
 
 # (Optional) Comma separated list of trackers which should be considered as default or fallback trackers in case `--trackers or -t`  flag is not provided.
 # eg: default_tracker_list=NBL,BLU,BHDTV -> This will by default uploads the torrent to NBL, BLU and BHDTV if `--trackers or -t` is not provided as command line argument.
