--- a/samples/reuploader/reupload.config.env
+++ b/samples/reuploader/reupload.config.env
@@ -122,6 +122,9 @@ dynamic_tracker_selection=False
 ################################################################
 # TMDB API key (Required)
 TMDB_API_KEY=
+# IMDB API key (Optional)
+IMDB_API_KEY=
+
 
 # This below property determines whether or not the tmdb id will be automatically decided by the uploader or not.
 # Be default this is set as 1, which is the safest configuration (although not fool proof)
