--- a/samples/reuploader/reupload.config.env
+++ b/samples/reuploader/reupload.config.env
@@ -142,7 +142,7 @@ tmdb_result_auto_select_threshold=1
 #                         Image Hosts                          #
 #                                                              #
 ################################################################
-# 6 options are available --> |  imgbox  |  imgbb  |  freeimage  |  ptpimg  |  imgfi  |  imgur  |  snappie  |
+# 8 options are available --> |  imgbox  |  imgbb  |  freeimage  |  ptpimg  |  imgfi  |  imgur  |  snappie  | pixhost |
 # set their order below (spelling matters) (to remove a host just delete the value and leave it blank)
 img_host_1=
 img_host_2=
@@ -151,8 +151,10 @@ img_host_4=
 img_host_5=
 img_host_6=
 img_host_7=
+img_host_8=
 # set the image hosts API keys below
-imgbox_api_key=leave_blank # No API key needed here, don't touch this line https://pypi.org/project/pyimgbox/
+pixhost_api_key=leave_blank # No API key needed here
+imgbox_api_key=leave_blank # No API key needed here
 ptpimg_api_key= # follow https://github.com/theirix/ptpimg-uploader#api-key guide to get api key
 imgbb_api_key=
 freeimage_api_key=
