--- a/.gitlab/ci/base-images.gitlab-ci.yml
+++ b/.gitlab/ci/base-images.gitlab-ci.yml
@@ -139,10 +139,10 @@ gg-bot-base-test:
     - |
       echo "Publishing Image to Docker Hub Container Registry: '$DOCKER_CI_REGISTRY_BASE_IMAGE:test-latest"
     - docker push "$DOCKER_CI_REGISTRY_BASE_IMAGE:test-latest"
-  # rules:
-  #   - if: "$CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH" # runs only on master branch
-  #     changes:
-  #       - Dockerfiles/Dockerfile.baseimage.test
+  rules:
+    - if: "$CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH" # runs only on master branch
+      changes:
+        - Dockerfiles/Dockerfile.baseimage.test
 
 #
 # -------------- noobmaster669/gg-bot-base:disk-latest
