--- a/samples/assistant/config.env
+++ b/samples/assistant/config.env
@@ -95,6 +95,10 @@ LST_ANNOUNCE_URL=https://lst.gg/announce/<TRACKER_PASS_KEY>
 3EVILS_API_KEY=# API_KEY
 3EVILS_ANNOUNCE_URL=https://3evils.net/announce/<TRACKER_PASS_KEY>
 
+# PassThePopcorn
+PTP_API_USER=# API_USER
+PTP_API_KEY=# API_KEY
+PTP_ANNOUNCE_URL=<TRACKER_ANNOUNCE_URL>
 
 
 ################################################################
