--- a/samples/assistant/config.env
+++ b/samples/assistant/config.env
@@ -107,9 +107,9 @@ PTP_ANNOUNCE_URL=<TRACKER_ANNOUNCE_URL>
 #                                                              #
 ################################################################
 # TMDB API key (Required)
-TMDB_API_KEY=
+TMDB_API_KEY= # https://www.themoviedb.org/documentation/api
 # IMDB API key (Optional)
-IMDB_API_KEY=
+IMDB_API_KEY= # https://imdb-api.com/api
 
 # (Optional) Comma separated list of trackers which should be considered as default or fallback trackers in case `--trackers or -t`  flag is not provided.
 # eg: default_tracker_list=NBL,BLU,BHDTV -> This will by default uploads the torrent to NBL, BLU and BHDTV if `--trackers or -t` is not provided as command line argument.
