--- a/samples/reuploader/reupload.config.env
+++ b/samples/reuploader/reupload.config.env
@@ -95,6 +95,7 @@ LST_ANNOUNCE_URL=https://lst.gg/announce/<TRACKER_PASS_KEY>
 3EVILS_API_KEY=# API_KEY
 3EVILS_ANNOUNCE_URL=https://3evils.net/announce/<TRACKER_PASS_KEY>
 
+
 # Dynamic Tracker Selection
 # -----------------------------------------
 # Dynamic tracker selection allows the user to control the trackers to which each torrent will be uploaded to.
@@ -125,9 +126,9 @@ dynamic_tracker_selection=False
 #                                                              #
 ################################################################
 # TMDB API key (Required)
-TMDB_API_KEY=
+TMDB_API_KEY= # https://www.themoviedb.org/documentation/api
 # IMDB API key (Optional)
-IMDB_API_KEY=
+IMDB_API_KEY= # https://imdb-api.com/api
 
 
 # This below property determines whether or not the tmdb id will be automatically decided by the uploader or not.
