--- a/samples/assistant/config.env
+++ b/samples/assistant/config.env
@@ -100,6 +100,10 @@ PTP_API_USER=# API_USER
 PTP_API_KEY=# API_KEY
 PTP_ANNOUNCE_URL=<TRACKER_ANNOUNCE_URL>
 
+# GreatPostertWall
+GPW_API_KEY= # API_KEY
+GPW_ANNOUNCE_URL=https://tracker.greatposterwall.com/<TRACKER_PASS_KEY>/announce
+
 
 ################################################################
 #                                                              #
