kind of working ptp code

--- a/samples/assistant/config.env
+++ b/samples/assistant/config.env
@@ -99,6 +99,10 @@ LST_ANNOUNCE_URL=https://lst.gg/announce/<TRACKER_PASS_KEY>
 PTP_API_USER=# API_USER
 PTP_API_KEY=# API_KEY
 PTP_ANNOUNCE_URL=<TRACKER_ANNOUNCE_URL>
+PTP_USER_NAME=# Username of your PTP Account
+PTP_USER_PASSWORD=# Password to your account (encouraged to wrap it inside "" )
+PTP_2FA_ENABLED=False # Set this to True if you have 2fa enabled for your account.
+PTP_2FA_CODE=# The 2FA key to generate 2FA codes
 
 # GreatPostertWall
 GPW_API_KEY= # API_KEY
