--- a/site_templates/speedapp.json
+++ b/site_templates/speedapp.json
@@ -8,10 +8,13 @@
     "bbcode_line_break": "\n",
     "bbcode_code": "[code][/code]",
     "title_separator": ".",
+
     "technical_jargons": {
         "authentication_mode": "BEARER",
+        "response_type": "JSON",
         "payload_type": "JSON"
     },
+
     "translation": {
         "dot_torrent": "file",
         "torrent_title": "name",
@@ -29,6 +32,7 @@
         "mal": "mal",
         "nfo_file": "nfo"
     },
+
     "hybrid_mappings": {
         "type": {
             "required": true,
