--- a/samples/reuploader/.env
+++ b/samples/reuploader/.env
@@ -12,9 +12,12 @@ QBITTORRENT_WEBUI_PORT=8080
 RUTORRENT_WEBUI_PORT=8082
 RUTORRENT_EXTRA_PORTS=51415
 
+# GG-BOT Visor Server Ports
+VISOR_SERVER_PORT=30035
+
 # Services image versions
 GG_BOT_REUPLOADER_VERSION=latest-reuploader
-MONGO_EXPRESS_VERSION=0.54.0
+MONGO_EXPRESS_VERSION=latest
 MONGO_VERSION=latest
 QBITTORRENT_VERSION=latest
 RUTORRENT_VERSION=latest
