--- a/dev_scripts/docker-compose.yml
+++ b/dev_scripts/docker-compose.yml
@@ -48,6 +48,8 @@ services:
       - ${BASE_PATH}/data/downloads:/downloads
     env_file:
       - reupload.config.env
+    ports:
+      - ${VISOR_SERVER_PORT}:30035
     # based on your configuration the gg-bot-auto-uploader will depend on either mongo or redis
     # if using mongo comment out redis, and vice-versa
     depends_on:
