--- a/Dockerfiles/Dockerfile.baseimage
+++ b/Dockerfiles/Dockerfile.baseimage
@@ -25,6 +25,8 @@ RUN \
 	echo "**** install build packages ****" && \
 	apk add --no-cache --virtual=build-dependencies \
 	g++ \
+	libxml2-dev \
+  	libxslt-dev \
 	py3-pip \
 	python3-dev
 
