optimized build pipeline with wheel and lxml

--- a/Dockerfiles/Dockerfile.baseimage.disk
+++ b/Dockerfiles/Dockerfile.baseimage.disk
@@ -77,3 +77,12 @@ RUN \
 RUN \
 	echo '#!/bin/bash\nmono /usr/src/app/build/BDInfo.exe "$@"' > /usr/bin/bdinfocli && \
 	chmod +x /usr/bin/bdinfocli
+
+
+COPY requirements/requirements_baseimages.txt .
+RUN \
+  echo "**** install pip prerequisite packages ****" && \
+  pip3 install -r requirements_baseimages.txt && \
+  pip3 freeze > requirements_baseimages.txt
+
+RUN rm requirements_baseimages.txt
