--- a/Dockerfiles/Dockerfile.baseimage.test
+++ b/Dockerfiles/Dockerfile.baseimage.test
@@ -169,4 +169,14 @@ RUN set -eux; \
 	\
 	pip --version
 
+
+COPY requirements/requirements_baseimages.txt .
+RUN \
+  echo "**** install pip prerequisite packages ****" && \
+  pip3 install -r requirements_baseimages.txt && \
+  pip3 freeze > requirements_baseimages.txt
+
+RUN rm requirements_baseimages.txt
+
+
 CMD ["python3"]
