--- a/Dockerfiles/Dockerfile.baseimage.aarch64
+++ b/Dockerfiles/Dockerfile.baseimage.aarch64
@@ -44,3 +44,12 @@ RUN \
 	python3 \
 	mktorrent \
 	unrar
+
+
+COPY requirements/requirements_baseimages.txt .
+RUN \
+  echo "**** install pip prerequisite packages ****" && \
+  pip3 install -r requirements_baseimages.txt && \
+  pip3 freeze > requirements_baseimages.txt
+
+RUN rm requirements_baseimages.txt
