--- a/.gitlab/ci/base-images.gitlab-ci.yml
+++ b/.gitlab/ci/base-images.gitlab-ci.yml
@@ -47,7 +47,7 @@ gg-bot-base:
       echo "Publishing Image to Docker Hub Container Registry: '$DOCKER_CI_REGISTRY_BASE_IMAGE:latest"
     - docker push "$DOCKER_CI_REGISTRY_BASE_IMAGE:latest"
   rules:
-    - if: "$CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH" # runs only on master branch
+    - if: "$CI_COMMIT_BRANCH == 'dev'" # runs only on dev branch
       changes:
         - Dockerfiles/Dockerfile.baseimage
 
@@ -78,7 +78,7 @@ gg-bot-base-aarch64:
       echo "Publishing Image to Docker Hub Container Registry: '$DOCKER_CI_REGISTRY_BASE_IMAGE:aarch64-latest"
     - docker push "$DOCKER_CI_REGISTRY_BASE_IMAGE:aarch64-latest"
   rules:
-    - if: "$CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH" # runs only on master branch
+    - if: "$CI_COMMIT_BRANCH == 'dev'" # runs only on dev branch
       changes:
         - Dockerfiles/Dockerfile.baseimage.aarch64
 
@@ -109,7 +109,7 @@ gg-bot-base-armhf:
       echo "Publishing Image to Docker Hub Container Registry: '$DOCKER_CI_REGISTRY_BASE_IMAGE:armhf-latest"
     - docker push "$DOCKER_CI_REGISTRY_BASE_IMAGE:armhf-latest"
   rules:
-    - if: "$CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH" # runs only on master branch
+    - if: "$CI_COMMIT_BRANCH == 'dev'" # runs only on dev branch
       changes:
         - Dockerfiles/Dockerfile.baseimage.armhf
 
@@ -140,7 +140,7 @@ gg-bot-base-test:
       echo "Publishing Image to Docker Hub Container Registry: '$DOCKER_CI_REGISTRY_BASE_IMAGE:test-latest"
     - docker push "$DOCKER_CI_REGISTRY_BASE_IMAGE:test-latest"
   rules:
-    - if: "$CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH" # runs only on master branch
+    - if: "$CI_COMMIT_BRANCH == 'dev'" # runs only on dev branch
       changes:
         - Dockerfiles/Dockerfile.baseimage.test
 
@@ -171,6 +171,6 @@ gg-bot-base-disk:
       echo "Publishing Image to Docker Hub Container Registry: '$DOCKER_CI_REGISTRY_BASE_IMAGE:disk-latest"
     - docker push "$DOCKER_CI_REGISTRY_BASE_IMAGE:disk-latest"
   rules:
-    - if: "$CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH" # runs only on master branch
+    - if: "$CI_COMMIT_BRANCH == 'dev'" # runs only on dev branch
       changes:
         - Dockerfiles/Dockerfile.baseimage.disk
