new image host lensdump

--- a/samples/reuploader/reupload.config.env
+++ b/samples/reuploader/reupload.config.env
@@ -163,7 +163,8 @@ tmdb_result_auto_select_threshold=1
 #                         Image Hosts                          #
 #                                                              #
 ################################################################
-# 8 options are available --> |  imgbox  |  imgbb  |  freeimage  |  ptpimg  |  imgfi  |  imgur  |  snappie  | pixhost |
+# GG-BOT uploaders support uploading screenshots to 9 different image hosting services.
+# |  imgbox  |  imgbb  |  freeimage  |  ptpimg  |  imgfi  |  imgur  |  snappie  | pixhost | lensdump |
 # set their order below (spelling matters) (to remove a host just delete the value and leave it blank)
 img_host_1=
 img_host_2=
@@ -173,6 +174,7 @@ img_host_5=
 img_host_6=
 img_host_7=
 img_host_8=
+img_host_9=
 # set the image hosts API keys below
 pixhost_api_key=leave_blank # No API key needed here
 imgbox_api_key=leave_blank # No API key needed here
@@ -183,6 +185,7 @@ snappie_api_key=# Get in touch with staff to get API KEY
 imgfi_api_key=# Get in touch with staff to get API KEY
 imgur_api_key=# this is your client_secret
 imgur_client_id=# register your application (https://api.imgur.com/oauth2/addclient) with Anonymous usage without user authorization to get client id and secret
+lensdump_api_key=
 
 # pretty self explanatory, this will take number of screenshots you want, all evenly spaced depending on how long the video is
 # Set this to 0 if you want to upload without taking any screenshots
