--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,72 +1,47 @@
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.1.0
+    rev: v4.4.0
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
-        exclude: "^po/"
-      - id: mixed-line-ending
-        args: ["--fix=lf"]
       - id: check-merge-conflict
+      - id: mixed-line-ending
+        args: [ "--fix=lf" ]
       - id: check-yaml
       - id: check-ast
       - id: check-added-large-files
-  - repo: local
+      - id: check-yaml
+        args: [ --unsafe ]
+      - id: check-json
+      - id: check-builtin-literals
+      - id: check-docstring-first
+      - id: fix-byte-order-marker
+  - repo: https://github.com/adrienverge/yamllint.git
+    rev: v1.28.0
     hooks:
-      - id: pylint
-        name: check code for errors
-        language: system
-        entry: poetry run pylint
-        types: [python]
-      # - id: codespell
-      #   name: check for misspellings
-      #   description: Check for common misspellings in text files
-      #   args:
-      #     [
-      #       --check-hidden,
-      #       --check-filenames,
-      #       --skip=*.po,
-      #       --builtin,
-      #       clear,
-      #       rare,
-      #       informal,
-      #       usage,
-      #       code,
-      #     ]
-      #   language: system
-      #   entry: poetry run codespell
-      #   types: [text]
-      - id: black
-        name: format python code
-        description: Automatically format code to follow the black code style
-        language: system
-        entry: poetry run black
-        types_or: [python, pyi]
-        require_serial: true
-      - id: isort
-        name: sort python imports
-        description: Automatically sort import statements
-        language: system
-        entry: poetry run isort
-        types_or: [cython, pyi, python]
-        require_serial: true
+      - id: yamllint
+        args:
+          - --no-warnings
+          - -d
+          - '{extends: relaxed, rules: {line-length: {max: 90}}}'
+  - repo: https://github.com/PyCQA/autoflake
+    rev: v2.0.0
+    hooks:
+      - id: autoflake
+  - repo: https://github.com/asottile/pyupgrade
+    rev: v3.3.1
+    hooks:
       - id: pyupgrade
-        name: check for old python syntax
-        description: Automatically upgrade syntax for newer versions
-        args: [--py36-plus, --keep-runtime-typing]
-        language: system
-        entry: poetry run pyupgrade
-        types: [python]
-      - id: mypy
-        name: type check python code
-        description: Static type checker for Python
-        language: system
-        entry: poetry run mypy
-        types_or: [python, pyi]
-        require_serial: true
-      - id: pydocstyle
-        name: check docstrings
-        description: Check docstrings
-        language: system
-        entry: poetry run pydocstyle
-        types: [python]
+        args: [ --py37-plus ]
+  - repo: https://github.com/hadialqattan/pycln
+    rev: v1.1.0
+    hooks:
+      - id: pycln
+  - repo: https://github.com/pre-commit/mirrors-yapf
+    rev: v0.31.0
+    hooks:
+      - id: yapf
+        args:
+          - -i
+          - -r
+          - --style=google
