--- a/samples/assistant/config.env
+++ b/samples/assistant/config.env
@@ -124,6 +124,10 @@ PTP_2FA_CODE=# The 2FA key to generate 2FA codes
 GPW_API_KEY= # API_KEY
 GPW_ANNOUNCE_URL=https://tracker.greatposterwall.com/<TRACKER_PASS_KEY>/announce
 
+# RetroFlix
+RTX_API_KEY=
+RTX_ANNOUNCE_URL=http://peer.retroflix.net/announce.php?passkey=<TRACKER_PASS_KEY>
+
 
 ################################################################
 #                                                              #
@@ -290,10 +294,10 @@ media_move_location=
 #
 # where the subfolder will be the type
 # eg: movies dot torrent will be moved to {dot_torrent_move_location}/movie/...torrent
-#     epsiodes dot torrent  will be moved to {dot_torrent_move_location}/epsiode/...torrent
+#     episode dot torrent  will be moved to {dot_torrent_move_location}/episode/...torrent
 #
 #     movies file will be moved to {media_move_location}/movie/...file
-#     epsiodes file will be moved to {media_move_location}/epsiode/...file
+#     episodes file will be moved to {media_move_location}/episode/...file
 enable_type_base_move=False
 
 
@@ -314,7 +318,7 @@ client_path=/
 cross_seed_label=
 
 # If you are running the torrent client / uploader in a docker containers there is a high chance that the paths accessible inside the containers will
-# be different. For such cases, path translations can be used for propper seeding.
+# be different. For such cases, path translations can be used for proper seeding.
 # If you're running the client / uploader in a docker container you will need to map the containers download path to its system path
 # (If you are using Sonarr/Radarr then you've already probably done this under "Remote Path Mappings" in the "Download Clients" section)
 # e.g.
