new tracker tdc

--- a/samples/assistant/config.env
+++ b/samples/assistant/config.env
@@ -125,8 +125,12 @@ GPW_API_KEY= # API_KEY
 GPW_ANNOUNCE_URL=https://tracker.greatposterwall.com/<TRACKER_PASS_KEY>/announce
 
 # RetroFlix
-RTX_API_KEY=
+RTX_API_KEY= # API_KEY
 RTX_ANNOUNCE_URL=http://peer.retroflix.net/announce.php?passkey=<TRACKER_PASS_KEY>
+
+# TheDarkCommunity
+TDC_API_KEY= # API_KEY
+TDC_ANNOUNCE_URL=https://thedarkcommunity.cc/announce/<TRACKER_PASS_KEY>
 
 
 ################################################################
