--- a/samples/reuploader/reupload.config.env
+++ b/samples/reuploader/reupload.config.env
@@ -111,6 +111,14 @@ LST_ANNOUNCE_URL=https://lst.gg/announce/<TRACKER_PASS_KEY>
 3EVILS_API_KEY=# API_KEY
 3EVILS_ANNOUNCE_URL=https://3evils.net/announce/<TRACKER_PASS_KEY>
 
+# RetroFlix
+RTX_API_KEY= # API_KEY
+RTX_ANNOUNCE_URL=http://peer.retroflix.net/announce.php?passkey=<TRACKER_PASS_KEY>
+
+# TheDarkCommunity
+TDC_API_KEY= # API_KEY
+TDC_ANNOUNCE_URL=https://thedarkcommunity.cc/announce/<TRACKER_PASS_KEY>
+
 
 # Dynamic Tracker Selection
 # -----------------------------------------
@@ -121,7 +129,7 @@ LST_ANNOUNCE_URL=https://lst.gg/announce/<TRACKER_PASS_KEY>
 #   - Uploader will list all the torrents in the configured client after performing label filtering, all those torrents
 #     will be uploaded to all the trackers provided in the `-t` or `--trackers` list.
 #
-# When the dynamic tracker selction feature is enabled,
+# When the dynamic tracker selection feature is enabled,
 #   - Reuploader still needs some trackers to be provided via the `-t` or `--trackers` command line argument.
 #     These trackers will be considered as `fall_back_trackers`. (we'll get to this in more details later)
 #   - The property `reupload_label` will be ignored. All torrents added to the client should be having the
