ptp trumpable tags support

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,7 +25,8 @@ repos:
           [
             --check-hidden,
             --check-filenames,
-            -L te,
+            -L,
+            'te,tha',
             --skip=*.po,
             --builtin,
             clear,
