--- a/.codespellrc
+++ b/.codespellrc
@@ -1,4 +1,4 @@
 [codespell]
-ignore-words-list=te,th,tha,Writters,writters,Succesfully,succesfully
+ignore-words-list=te,th,tha,writters,succesfully
 skip=*.po
 exclude-file=.codespellrc
