next demo site template initial commit

--- a/samples/assistant/config.env
+++ b/samples/assistant/config.env
@@ -132,6 +132,9 @@ RTX_ANNOUNCE_URL=http://peer.retroflix.net/announce.php?passkey=<TRACKER_PASS_KE
 TDC_API_KEY= # API_KEY
 TDC_ANNOUNCE_URL=https://thedarkcommunity.cc/announce/<TRACKER_PASS_KEY>
 
+# N3XTDemoSite
+NXT_API_KEY= # API_KEY
+NXT_ANNOUNCE_URL=http://demo.n3xtsource.com/announce/<TRACKER_PASS_KEY>
 
 ################################################################
 #                                                              #
