untested TL support

--- a/samples/assistant/config.env
+++ b/samples/assistant/config.env
@@ -136,6 +136,10 @@ TDC_ANNOUNCE_URL=https://thedarkcommunity.cc/announce/<TRACKER_PASS_KEY>
 NXT_API_KEY= # API_KEY
 NXT_ANNOUNCE_URL=http://demo.n3xtsource.com/announce/<TRACKER_PASS_KEY>
 
+# TorrentLeech
+TL_API_KEY= # TRACKER_PASS_KEY
+TL_ANNOUNCE_URL=https://tracker.torrentleech.org/a/<TRACKER_PASS_KEY>/announce https://tracker.tleechreload.org/a/<TRACKER_PASS_KEY>/announce
+
 ################################################################
 #                                                              #
 #                    Other API Keys / Defaults                 #
