--- a/samples/reuploader/reupload.config.env
+++ b/samples/reuploader/reupload.config.env
@@ -123,6 +123,11 @@ TDC_ANNOUNCE_URL=https://thedarkcommunity.cc/announce/<TRACKER_PASS_KEY>
 NXT_API_KEY= # API_KEY
 NXT_ANNOUNCE_URL=http://demo.n3xtsource.com/announce/<TRACKER_PASS_KEY>
 
+# TorrentLeech
+TL_API_KEY= # TRACKER_PASS_KEY
+TL_ANNOUNCE_URL=https://tracker.torrentleech.org/a/<TRACKER_PASS_KEY>/announce https://tracker.tleechreload.org/a/<TRACKER_PASS_KEY>/announce
+
+
 # Dynamic Tracker Selection
 # -----------------------------------------
 # Dynamic tracker selection allows the user to control the trackers to which each torrent will be uploaded to.
