--- a/Dockerfiles/Dockerfile.new
+++ b/Dockerfiles/Dockerfile.new
@@ -28,7 +28,7 @@ RUN \
 
 COPY . .
 RUN rm -r requirements/ requirements.txt
-RUN rm auto_reupload.py && chmod +x auto_upload.py
+RUN rm auto_reupload.py && rm auto_upload.py && chmod +x auto_upload_new.py
 
 # ports and volumes
 VOLUME /data /temp_upload
